--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers/controllers.js"></script>
     <script src="js/controllers/PlaylistsCtrl.controller.js"></script>
+    <script src="js/controllers/UserController.controller.js"></script>
     <script src="js/services/AccesService.factory.js"></script>
     <script src="js/model/Question.class.js"></script>
   </head>
