add question feature done with modal

--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,8 @@
     <script src="js/services/AccesService.factory.js"></script>
     <script src="js/model/Question.class.js"></script>
     <script src="js/model/User.class.js"></script>
+    <script src="js/model/Topic.class.js"></script>
+    <script src="js/model/Question.class.js"></script>
   </head>
 
   <body ng-app="starter">
