--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <script src="js/controllers/controllers.js"></script>
     <script src="js/controllers/PlaylistsCtrl.controller.js"></script>
     <script src="js/controllers/InsideQuestionCtrl.controller.js"></script>
+    <script src="js/controllers/TopicCtrl.controller.js"></script>
     <script src="js/controllers/UserCtrl.controller.js"></script>
     <script src="js/services/AccesService.factory.js"></script>
     <script src="js/model/Question.class.js"></script>
