added score on answers and questions also done filtered to rate questions not to rated answers yet

--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,8 @@
     <script src="js/model/User.class.js"></script>
     <script src="js/model/Topic.class.js"></script>
     <script src="js/model/Answer.class.js"></script>
+    <script src="js/model/Valorationq.class.js"></script>  
+    <script src="js/model/Valorationa.class.js"></script>
   </head>
 
   <body ng-app="starter">
